crates/musli-zerocopy/tests/ui/deny_uninhabitable_enum_error.stderr
error[E0084]: unsupported representation for zero-variant enum
 --> tests/ui/deny_uninhabitable_enum_error.rs:4:1
  |
4 | #[repr(u8)]
  | ^^^^^^^^^^^
5 | enum Uninhabitable {}
  | ------------------ zero-variant enum

warning: unreachable expression
 --> tests/ui/deny_uninhabitable_enum_error.rs:3:41
  |
3 | #[derive(Debug, Clone, Copy, PartialEq, ZeroCopy)]
  |                                         ^^^^^^^^
  |                                         |
  |                                         unreachable expression
  |                                         any code following this `match` expression is unreachable, as all arms diverge
  |
  = note: `#[warn(unreachable_code)]` on by default
  = note: this warning originates in the derive macro `ZeroCopy` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0004]: non-exhaustive patterns: type `&Uninhabitable` is non-empty
 --> tests/ui/deny_uninhabitable_enum_error.rs:3:41
  |
3 | #[derive(Debug, Clone, Copy, PartialEq, ZeroCopy)]
  |                                         ^^^^^^^^
  |
note: `Uninhabitable` defined here
 --> tests/ui/deny_uninhabitable_enum_error.rs:5:6
  |
5 | enum Uninhabitable {}
  |      ^^^^^^^^^^^^^
  = note: the matched value is of type `&Uninhabitable`
  = note: references are always considered inhabited
  = note: this error originates in the derive macro `ZeroCopy` (in Nightly builds, run with -Z macro-backtrace for more info)
