crates/musli-zerocopy/tests/ui/deny_uninhabitable_enum_error.rs
use musli_zerocopy::ZeroCopy;

#[derive(Debug, Clone, Copy, PartialEq, ZeroCopy)]
#[repr(u8)]
enum Uninhabitable {}

fn main() {
}
